2002-01-20  Jason Tibbitts  <tibbs@math.uh.edu>

	* bin/mj_shell: Delay module loading until runtime.
	Add -W option, load and import Carp at runtime, and fixup warnings
	to spit out a backtrace.
	

2002-01-19  Jason L Tibbitts III  <tibbs@math.uh.edu>

	Add Encoding=>'8bit' to generated MIME Entities:
	* bin/mj_email (parse_commands)
	* bin/mj_queuerun (parse_commands)
	* lib/Mj/Digest/Text.pm (new)
	* lib/Mj/Digest/MIME.pm (new, add, done)
	* lib/Mj/Digest/Index.pm (done)
	* lib/Mj/Token.pm (confirm, t_accept)
	* lib/Mj/Resend.pm (post, _post, _add_fters)
	* lib/Mj/Parser.pm (parse_entity, parse_part)
	* lib/Mj/MailOut.pm (welcome)
	* lib/Mj/BounceHandler.pm (handle_bounce_message, handle_bounce_token)
	* lib/Mj/Access.pm (_a_forward)
	* lib/Majordomo.pm (reject, tokeninfo_start)
	
	* lib/Mj/Addr.pm (_validate): Accept dots in the phrase portion of
	a route address.

2002-01-18  Michael Yount <csf@moscow.com>

	* bin/mj_wwwusr:  Add support for the archive command.

	* lib/Majordomo.pm:  (_lists)  Determine if access to the
	archive command is allowed, and store the result in the
	can_read variable.

	* lib/mj_cf_defs.pl:  Add "signoff" to the default administrivia
	patterns.

	* lib/Mj/CommandProps.pm:  Allow the summary and reverse
	modes of the archive command to work together.

	* lib/Mj/Format.pm:  (archive)  Add format file support
	for the archive-summary command.
	(lists)  Add support for the CAN_READ substitution, a boolean
	variable that indicates if the archive command is accessible.

	* lib/Mj/Inform.pm:  (_inform_owner)  Use the whoami_owner
	setting for the owner's address, not the sender setting.
	Thanks to Duncan Hill.

	* lib/Mj/MailOut.pm:  (mail_message)  Skip empty or undefined
	addresses.  Thanks to Stephen Frost.

	* setup/ask_domain.pl:  Fix warning.  Thanks to Brock Rozen.
 
2002-01-15  Michael Yount <csf@moscow.com>

	* lib/Mj/List.pm:  (digest_sync)  Bugfix:  supply the
	correct arguments to digest_examine.  Thanks to Roger Klorese.
